--- a/Goonbee Cardstack/MainViewController.xib
+++ b/Goonbee Cardstack/MainViewController.xib
@@ -154,10 +154,7 @@
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="251576495"/>
-				<object class="NSColor" key="IBUIBackgroundColor">
-					<int key="NSColorSpace">1</int>
-					<bytes key="NSRGB">MSAwLjgyMzE5OTQ1MzEgMC43MDE2NTMxODU4AA</bytes>
-				</object>
+				<reference key="IBUIBackgroundColor" ref="63728588"/>
 				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
@@ -285,6 +282,7 @@
 					<dictionary class="NSMutableDictionary" key="actions">
 						<string key="showLeft:">id</string>
 						<string key="showRight:">id</string>
+						<string key="showTop:">id</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="actionInfosByName">
 						<object class="IBActionInfo" key="showLeft:">
@@ -293,6 +291,10 @@
 						</object>
 						<object class="IBActionInfo" key="showRight:">
 							<string key="name">showRight:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="showTop:">
+							<string key="name">showTop:</string>
 							<string key="candidateClassName">id</string>
 						</object>
 					</dictionary>
