rc4 implemented tap functionality

--- a/Goonbee Cardstack/MainViewController.xib
+++ b/Goonbee Cardstack/MainViewController.xib
@@ -154,7 +154,10 @@
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="251576495"/>
-				<reference key="IBUIBackgroundColor" ref="63728588"/>
+				<object class="NSColor" key="IBUIBackgroundColor">
+					<int key="NSColorSpace">1</int>
+					<bytes key="NSRGB">MSAwLjQ3OTgxNTg2NiAwLjQ1NjIyOTI0NTgAA</bytes>
+				</object>
 				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
