--- a/Goonbee Cardstack/RightViewController.xib
+++ b/Goonbee Cardstack/RightViewController.xib
@@ -73,7 +73,6 @@
 						<string key="NSFrame">{{77, 247}, {117, 37}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:225</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -189,7 +188,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">6</int>
+			<int key="maxID">7</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -204,6 +203,17 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">RightViewController</string>
 					<string key="superclassName">GBCardViewController</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">showMain:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">showMain:</string>
+						<object class="IBActionInfo" key="NS.object.0">
+							<string key="name">showMain:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/RightViewController.h</string>
